--- a/home.html
+++ b/home.html
@@ -105,6 +105,7 @@
       <h1>关于</p>
       <p>你好，我是<a href="https://github.com/xireiki">xireiki</a>，这是我自学开发的主页，虽然只是我的练手之作，也请你不要盗用，谢谢。</p>
       <p>对于使用键盘后的背景问题，这不是html、css、js等可以控制的</p>
+      <p>PS: 本主页只适用于<a href="https://www.coolapk.com/apk/mark.via">Via</a>，其他浏览器无法正常使用。</p>
     </div>
     <p class="copyright copytext">&copy;禾煦 | @2021</p>
   </body>
