添加了一些设置

--- a/home.html
+++ b/home.html
@@ -91,6 +91,10 @@
     </div>
     <div id="setting">
       <h1>设置</p>
+      <h2>通用</h2>
+      <li>书签（暂时没用）<input type="checkbox" name="bookmark" /></li>
+      <li>背景图片<input type="checkbox" name="bg" /></li>
+      <li>背景优化<input type="checkbox" name="bgOptimize" /></li>
       <h2>背景</h2>
       <li>
         修改图片
@@ -107,6 +111,9 @@
       <p>对于使用键盘后的背景问题，这不是html、css、js等可以控制的</p>
       <p>PS: 本主页只适用于<a href="https://www.coolapk.com/apk/mark.via">Via</a>，其他浏览器无法正常使用。</p>
     </div>
+    <script>
+      setting();
+    </script>
     <p class="copyright copytext">&copy;禾煦 | @2021</p>
   </body>
 </html>
