--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="menu">
       <div class="Title">
-        <p class="Title2">禾煦</p>
+        <p class="Title2"><a href="#top" style="color: #ffffff">禾煦</a></p>
       </div>
       <div class="menuButton">
         <p id="menubutton"class="fa fa-indent" style="float: right;"><!-- 菜单 --></p>
@@ -114,6 +114,6 @@
     <script>
       setting();
     </script>
-    <p class="copyright copytext">&copy;禾煦 | @2021</p>
+    <p class="copyright copytext"><a href="https://xireiki.github.io/viahome" style="color: #ffffff">&copy;禾煦</a> | @2021</p>
   </body>
 </html>
