--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/homepage.css">
     <script src="script/jquery/jquery-3.6.0.min.js"></script>
+    <script src="script/tool.js"></script>
     <script src="script/index.js"></script>
   </head>
   <body>
