完善书签功能

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="setting">
       <h1>设置</p>
       <h2>通用</h2>
-      <li>书签（暂时没用）<input type="checkbox" name="bookmark" /></li>
+      <li>书签<input type="checkbox" name="bookmark" /></li>
       <li>背景图片<input type="checkbox" name="bg" /></li>
       <li>背景优化<input type="checkbox" name="bgOptimize" /></li>
       <li>Live2D（暂时没用）<input type="checkbox" name="live2d" /></li>
@@ -70,6 +70,9 @@
           <input type="button" value="清除" onclick="clearBackground();" />
         </form>
       </li>
+      <h2>书签</h2>
+      <li>显示添加按钮<input type="checkbox" name="addBookmark" /></li>
+      <li>显示删除按钮<input type="checkbox" name="deleteBookmark" /></li>
       <h2>其他</h2>
       <li>清除设置信息<input type="button" value="清除" onclick="clearSetting();" /></li>
     </div>
