--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h1>设置</p>
       <h2>通用</h2>
       <li>书签<input type="checkbox" name="bookmark" /></li>
-      <li>背景图片<input type="checkbox" name="bg" /></li>
+      <li>背景图片<input type="checkbox" name="bg" /><button id="hexu" onclick="禾煦();">下载</button></li>
       <li>背景优化<input type="checkbox" name="bgOptimize" /></li>
       <li>Live2D（暂时没用）<input type="checkbox" name="live2d" /></li>
       <li>搜索联想<input type="checkbox" name="Lenovo" /></li>
