--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         修改图片
         <form class="backgroundFrom">
           <input id="background" type="file" name="background" />
-          <input type="button" value="修改" onclick="submitBackground();" />
-          <input type="button" value="清除" onclick="clearBackground();" />
+          <button onclick="submitBackground();">修改</button>
+          <button onclick="clearBackground();">重置</button>
         </form>
       </li>
       <h2>书签</h2>
       <li>显示添加按钮<input type="checkbox" name="addBookmark" /></li>
       <li>显示删除按钮<input type="checkbox" name="deleteBookmark" /></li>
       <h2>其他</h2>
-      <li>清除设置信息<input type="button" value="清除" onclick="clearSetting();" /></li>
+      <li>清除设置信息<button value="清除" onclick="clearSetting();" >清除</button></li>
     </div>
     <div id="about">
       <h1>关于</p>
