--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <button onclick="clearBackground();">重置</button>
         </form>
       </li>
+      <li>使用Via壁纸<input type="checkbox" name="viaBg" /></li>
       <h2>书签</h2>
       <li>显示添加按钮<input type="checkbox" name="addBookmark" /></li>
       <li>显示删除按钮<input type="checkbox" name="deleteBookmark" /></li>
