--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
       <h1>设置</p>
       <h2>通用</h2>
       <li>书签<input type="checkbox" name="bookmark" /></li>
-      <li>背景图片<input type="checkbox" name="bg" /><button id="hexu" onclick="禾煦();">下载</button></li>
-      <li>背景优化<input type="checkbox" name="bgOptimize" /></li>
-      <li>Live2D（暂时没用）<input type="checkbox" name="live2d" /></li>
       <li>搜索联想<input type="checkbox" name="Lenovo" /></li>
-      <li>隐藏底部信息<input type="checkbox" name="attribute" /></li>
+      <li>背景优化<input type="checkbox" name="bgOptimize" /></li>
+      <li>背景图片<input type="checkbox" name="bg" /><button id="hexu" onclick="禾煦();">下载</button></li>
       <li>标题（和煦）<input type="checkbox" name="title" /></li>
+      <li>隐藏底部信息<input type="checkbox" name="attribute" /></li>
+      <li>始终醒目的菜单栏<input type="checkbox" name="StrikingTitle" /></li>
+      <li>Live2D（暂时没用）<input type="checkbox" name="live2d" /></li>
       <h2>背景</h2>
       <li>
         修改图片
