--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       </li>
       <li>使用Via壁纸<input type="checkbox" name="viaBg" /></li>
       <h2>书签</h2>
-      <li>显示添加按钮<input type="checkbox" name="addBookmark" /></li>
-      <li>显示删除按钮<input type="checkbox" name="deleteBookmark" /></li>
+      <li>显示书签设置按钮<input type="checkbox" name="setBookmark" /></li>
       <h2>其他</h2>
+      <li>修复错误<button value="点击修复" onclick="ResetSetting();" >点击修复</button></li>
       <li>清除设置信息<button value="清除" onclick="clearSetting();" >清除</button></li>
     </div>
     <div id="about">
